# PyScrcpy

./: .gitignore  LICENSE  README.md
app2/: gradle.properties  settings.gradle
app2/app/: build.gradle
app2/app/src/androidTest/java/com/yuandiaodiaodiao/pyscrcpy/: ExampleInstrumentedTest.java
app2/app/src/main/: AndroidManifest.xml
app2/app/src/main/java/com/yuandiaodiaodiao/pyscrcpy/: ByteBuffPackage.java  MainActivity.java  ScreenService.java  SocketManager.java  SocketThread.java  (+1 more)
app2/app/src/main/res/layout/: activity_main.xml
app2/app/src/main/res/values/: strings.xml
app2/gradle/wrapper/: gradle-wrapper.properties
doc/: 流程图.drawio
server/: WebsocketAudioServer.py  WebsocketServer.py  audioTest.py  bitmap.bm  buildAndroid.py  buildAndroid2.py  buildStep1.bat  dlltest.py  hexcompare.py  imageshow.py  img.ui  main.py  mulprocessTest.py  pillowrgb.py  qrGen.py  qtvideo.py  rgb24.py  rgb2yuv.py  rtmp.py  server.py  server2.py  socketserver3.py  util.py  windowSize.py
server/ffmpegLib/: .clang-format  .gitignore  BlockingQueue.h  CMakeLists.txt  Decoder.h  FFmpegDecoder.cpp  README.md  bitmap.bm  buffer.h  dlltest.cpp  main2.cpp  memcpytest.cpp  server.cpp
server/ffmpegLib/AppProcessDemo/app/: build.gradle
server/ffmpegLib/AppProcessDemo/app/src/main/java/com/cry/cry/appprocessdemo/: ScreenRecorder.java  WebSocketController.java
server/ffmpegLib/lib/: dllcore.exp  dllcore.ilk  dllcore.lib
server/lib/: server3.exp  server3.lib  server6.exp  server6.lib  server7.exp  server7.lib  server8.exp  server8.lib  server9.exp  server9.lib  test.py
(+4 files in other folders)
